change p tag to div tag in fieldset

--- a/index.html
+++ b/index.html
@@ -44,31 +44,31 @@
         <fieldset>
             <div class="heading">Personal Details</div>
           <div class="form-control">
-            <p>
+            <div>
               <label for="first-name">FIRST NAME <span class="req">*</label>
               <br />
               <input type="text" id="first-name" name="first-name" placeholder="Thor" required />
-            </p>
+            </div>
 
-            <p>
+            <div>
               <label for="last-name">LAST NAME <span class="req">*</label>
               <br />
               <input type="text" id="last-name" name="last-name" placeholder="Odinson" required />
-            </p>
+            </div>
 
-            <p>
+            <div>
               <label for="age">AGE <span class="req">*</label>
               <br />
               <input type="number" id="age" name="age" required />
-            </p>
+            </div>
 
-            <p>
+            <div>
               <label for="address">ADDRESS <span class="req">*</label>
               <br />
               <textarea rows="5" cols="63" placeholder="Enter your address" required></textarea>
-            </p>
+            </div>
 
-            <p>
+            <div>
               <label for="zip_code">POSTAL / ZIP CODE <span class="req">*</label>
               <br />
               <input
@@ -79,20 +79,20 @@
                 placeholder="13245"
                 required
               />
-            </p>
+            </div>
           </div>
         </fieldset>
 
         <fieldset>
           <div class="heading">Set up your Account</div>
           <div class="form-control-2">
-            <p>
+            <div>
               <label for="Email">EMAIL ADDRESS <span class="req">*</label>
               <br />
               <input type="email" id="Email" name="Email" placeholder="you@example.com" required />
-            </p>
+            </div>
 
-            <p>
+            <div>
               <label for="user-password">PASSWORD <span class="req">*</label>
               <br />
               <input
@@ -101,9 +101,9 @@
                 name="user-password"
                 required
               />
-            </p>
+            </div>
 
-            <p>
+            <div>
               <label for="confirm-password">CONFIRM PASSWORD <span class="req">*</label>
               <br />
               <input
@@ -112,7 +112,7 @@
                 name="confirm-password"
                 required
               />
-            </p>
+            </div>
           </div>
         </fieldset>
         <button type="submit">Create Account</button>
